--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start:ios": "npm run ios -- --simulator='iPhone 15 Pro Max (17F433AA-15CB-4434-90AB-21E4B5929C7F)'"
   },
   "dependencies": {
     "react": "18.3.1",
