--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
     "start:ios": "npm run ios -- --simulator='iPhone 15 Pro Max (17F433AA-15CB-4434-90AB-21E4B5929C7F)'"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "add": "^2.0.6",
+    "or": "^0.2.0",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
